local-select.diff: New patch to fix select with a zero timeout.
svn path=/glibc-package/trunk/; revision=5045

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * libc0.3.symbols.hurd-i386: Drop removed unused xxx_ and yyy_ RPCs.
   * patches/hurd-i386/submitted-hurd-recvfrom.diff: New patch from Pino
     Toscano to fix recvfrom on socketpair.
+  * patches/hurd-i386/local-select.diff: New patch to fix select with a zero
+    timeout.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
