Close corresponding bug
svn path=/glibc-package/trunk/; revision=5046

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,7 +51,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-hurd-recvfrom.diff: New patch from Pino
     Toscano to fix recvfrom on socketpair.
   * patches/hurd-i386/local-select.diff: New patch to fix select with a zero
-    timeout.
+    timeout. Closes: #79358.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
