--- a/debian/changelog
+++ b/debian/changelog
@@ -49,7 +49,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     from Pino Toscano to fix crash or spurious deallocation on bogus input.
   * libc0.3.symbols.hurd-i386: Drop removed unused xxx_ and yyy_ RPCs.
   * patches/hurd-i386/submitted-hurd-recvfrom.diff: New patch from Pino
-    Toscano to fix recvfrom on socketpair.
+    Toscano to fix recvfrom on socketpair. Closes: #650095.
   * patches/hurd-i386/local-select.diff: New patch to fix select with a zero
     timeout. Closes: #79358.
 
