patches/hurd-i386/tg-struct_stat.diff: Add POSIX 2008 visibility.
svn path=/glibc-package/trunk/; revision=5051

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     Toscano to fix recvfrom on socketpair. Closes: #650095.
   * patches/hurd-i386/local-select.diff: New patch to fix select with a zero
     timeout. Closes: #79358.
+  * patches/hurd-i386/tg-struct_stat.diff: Add POSIX 2008 visibility.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
