--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/local-select.diff: New patch to fix select with a zero
     timeout. Closes: #79358.
   * patches/hurd-i386/tg-struct_stat.diff: Add POSIX 2008 visibility.
+  * patches/hurd-i386/submitted-posix2008.diff: Add POSIX 2008 visibility.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
