Name our biarch compat ld.so.conf.d files on arm* consistently with the ones on other archs.
svn path=/glibc-package/trunk/; revision=5054

--- a/debian/changelog
+++ b/debian/changelog
@@ -88,6 +88,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     during an upgrade between releases to ask whether it's ok to restart a
     service that will be restarted anyway when the package itself gets
     upgraded.
+  * Name our biarch compat ld.so.conf.d files on arm* consistently with the
+    ones on other archs.
 
  -- Samuel Thibault <sthibault@debian.org>  Mon, 17 Oct 2011 01:23:52 +0200
 
