hurd-i386/submitted-select-inputcheck.diff: Add select input check.
svn path=/glibc-package/trunk/; revision=5056

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,6 +72,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     timeout. Closes: #79358.
   * patches/hurd-i386/tg-struct_stat.diff: Add POSIX 2008 visibility.
   * patches/hurd-i386/submitted-posix2008.diff: Add POSIX 2008 visibility.
+  * patches/hurd-i386/submitted-select-inputcheck.diff: Add select input check.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
