Fix chmod regex in udeb pass to match the one used for others.
svn path=/glibc-package/trunk/; revision=5058

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     to the correct location in the udeb, so binaries can find it.
   * Install /lib/ld-linux.so.3 symlink in libc6:armhf, this will need
     to be reverted once the rebuild/rebootstrap is completed.
+  * Fix chmod regex in udeb pass to match the one used for others.
 
   [ Aurelien Jarno ]
   * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
