* Update Dutch debconf translation, by Vincent Zweije.  Closes: #649605.
svn path=/glibc-package/trunk/; revision=5059

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/amd64/cvs-dl_trampoline-cfi.diff: fix CFI in dl_trampoline code.
   * patches/mips/submitted-dl-platform.diff: fix a typo preventing loongson2f
     platform directory to be used.  Closes: #646610.
+  * Update Dutch debconf translation, by Vincent Zweije.  Closes: #649605.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
