* Update expected-results-x86_64-kfreebsd-gnu-libc to allow tst-clock1.out     to fail, as it seems to happen when there is other load than glibc on the     building machine.  Closes: #649185.
svn path=/glibc-package/trunk/; revision=5060

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/mips/submitted-dl-platform.diff: fix a typo preventing loongson2f
     platform directory to be used.  Closes: #646610.
   * Update Dutch debconf translation, by Vincent Zweije.  Closes: #649605.
+  * Update expected-results-x86_64-kfreebsd-gnu-libc to allow tst-clock1.out
+    to fail, as it seems to happen when there is other load than glibc on the
+    building machine.  Closes: #649185.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
