* patches/any/local-linuxthreads-XPG7.diff: fix XPG7 compliance in     linuxthreads version of pthread.h.  Closes: #647823.
svn path=/glibc-package/trunk/; revision=5061

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * Update expected-results-x86_64-kfreebsd-gnu-libc to allow tst-clock1.out
     to fail, as it seems to happen when there is other load than glibc on the
     building machine.  Closes: #649185.
+  * patches/any/local-linuxthreads-XPG7.diff: fix XPG7 compliance in
+    linuxthreads version of pthread.h.  Closes: #647823.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
