Fix changelog long lines
svn path=/glibc-package/trunk/; revision=5063

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,7 +66,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-ldsodefs.h.diff: Move committed part to
     patches/hurd-i386/cvs-ldsodefs.h.diff
   * patches/hurd-i386/cvs-sgttyb.diff: New patch to fix sgttyb ioctls values.
-  * patches/hurd-i386/tg-dup3.diff: New patch from Hurd topgit to implement dup3.
+  * patches/hurd-i386/tg-dup3.diff: New patch from Hurd topgit to implement
+    dup3.
   * patches/hurd-i386/submitted-dup2-fix.diff: Trivially port to dup3.
   * patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: New patch to
     brown-tape fix iceweasel.
