* Update from the latest SVN, branch eglibc-2_13.
svn path=/glibc-package/trunk/; revision=5065

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     building machine.  Closes: #649185.
   * patches/any/local-linuxthreads-XPG7.diff: fix XPG7 compliance in
     linuxthreads version of pthread.h.  Closes: #647823.
+  * Update from the latest SVN, branch eglibc-2_13.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
