* Add patches/amd64/cvs-pthread_cond_wait.diff to correctly handle EAGAIN     from FUTEX_WAIT_REQUEUE_PI..
svn path=/glibc-package/trunk/; revision=5066

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/any/local-linuxthreads-XPG7.diff: fix XPG7 compliance in
     linuxthreads version of pthread.h.  Closes: #647823.
   * Update from the latest SVN, branch eglibc-2_13.
+  * Add patches/amd64/cvs-pthread_cond_wait.diff to correctly handle EAGAIN
+    from FUTEX_WAIT_REQUEUE_PI..
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
