* Add support for stage1 builds.  Closes: #644546.
svn path=/glibc-package/trunk/; revision=5067

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-22) UNRELEASED; urgency=low
+eglibc (2.13-22) unstable; urgency=low
 
   [ Adam Conrad ]
   * patches/arm/unsubmitted-ldconfig-cache-abi.diff: New patch from
@@ -103,7 +103,10 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * Name our biarch compat ld.so.conf.d files on arm* consistently with the
     ones on other archs.
 
- -- Samuel Thibault <sthibault@debian.org>  Mon, 17 Oct 2011 01:23:52 +0200
+  [ Kyle Moffett ]
+  * Add support for stage1 builds.  Closes: #644546.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Dec 2011 21:49:03 +0100
 
 eglibc (2.13-21) unstable; urgency=low
 
