* debian/rules.d/tarball.mk: ignore manual/ directory.
svn path=/glibc-package/trunk/; revision=5068

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,7 +44,8 @@ eglibc (2.13-22) unstable; urgency=low
     linuxthreads version of pthread.h.  Closes: #647823.
   * Update from the latest SVN, branch eglibc-2_13.
   * Add patches/amd64/cvs-pthread_cond_wait.diff to correctly handle EAGAIN
-    from FUTEX_WAIT_REQUEUE_PI..
+    from FUTEX_WAIT_REQUEUE_PI.
+  * debian/rules.d/tarball.mk: ignore manual/ directory.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
