New changelog entry
svn path=/glibc-package/trunk/; revision=5070

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-23) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Dec 2011 23:36:21 +0100
+
 eglibc (2.13-22) unstable; urgency=low
 
   [ Adam Conrad ]
