* patches/arm/cvs-syscall-mcount.diff: new patch from upstream to fix     build on armel.
svn path=/glibc-package/trunk/; revision=5071

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.13-23) UNRELEASED; urgency=low
 
-  * 
+  * patches/arm/cvs-syscall-mcount.diff: new patch from upstream to fix
+    build on armel.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Dec 2011 23:36:21 +0100
 
