--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 eglibc (2.13-23) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * patches/arm/cvs-syscall-mcount.diff: new patch from upstream to fix
     build on armel.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Dec 2011 23:36:21 +0100
+  [ Samuel Thibault ]
+  * patches/hurd-i386/submitted-mach-nanosleep.diff: New patch from Pino to
+    reject some nanosleep parameters values.
+
+ -- Samuel Thibault <sthibault@debian.org>  Tue, 13 Dec 2011 00:05:49 +0100
 
 eglibc (2.13-22) unstable; urgency=low
 
