* patches/amd64/cvs-pthread_cond_wait.diff: remove as it seems to cause     some issue with some kernels.  Closes: #651746.
svn path=/glibc-package/trunk/; revision=5081

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.13-23) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/arm/cvs-syscall-mcount.diff: new patch from upstream to fix
     build on armel.
+  * patches/amd64/cvs-pthread_cond_wait.diff: remove as it seems to cause
+    some issue with some kernels.  Closes: #651746.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mach-nanosleep.diff: New patch from Pino to
