--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-23) UNRELEASED; urgency=low
+eglibc (2.13-23) unstable; urgency=low
 
   [ Aurelien Jarno ]
   * patches/arm/cvs-syscall-mcount.diff: new patch from upstream to fix
@@ -10,7 +10,7 @@ eglibc (2.13-23) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-mach-nanosleep.diff: New patch from Pino to
     reject some nanosleep parameters values.
 
- -- Samuel Thibault <sthibault@debian.org>  Tue, 13 Dec 2011 00:05:49 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 13 Dec 2011 23:40:48 +0100
 
 eglibc (2.13-22) unstable; urgency=low
 
