New changelog entry
svn path=/glibc-package/trunk/; revision=5084

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-24) UNRELEASED; urgency=low
+
+  *  
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
+
 eglibc (2.13-23) unstable; urgency=low
 
   [ Aurelien Jarno ]
