* patches/m68k/local-byteswap.diff: drop the m68k optimized version of     <bits/byteswap.h>.  Closes: #652356.
svn path=/glibc-package/trunk/; revision=5088

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.13-24) UNRELEASED; urgency=low
 
-  *  
+  * patches/m68k/local-byteswap.diff: drop the m68k optimized version of
+    <bits/byteswap.h>.  Closes: #652356.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
