--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ eglibc (2.13-24) UNRELEASED; urgency=low
 
   * patches/m68k/local-byteswap.diff: drop the m68k optimized version of
     <bits/byteswap.h>.  Closes: #652356.
+  * Add m68k expected tests results.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
