--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -1,26 +1,26 @@
 # translation of ru.po to Russian
 # Translation of glibc debconf .po to Russian
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the eglibc package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 #
 # Yuri Kozlov <kozlov.y@gmail.com>, 2006.
 # Sergey Alyoshin <alyoshin.s@gmail.com>, 2007, 2008.
-# Yuri Kozlov <yuray@komyakino.ru>, 2009.
+# Yuri Kozlov <yuray@komyakino.ru>, 2009, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: eglibc 2.9-18\n"
+"Project-Id-Version: eglibc 2.13-23\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2009-06-27 12:46+0400\n"
+"PO-Revision-Date: 2011-12-17 09:26+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: multiselect
 #. Choices
@@ -111,10 +111,10 @@ msgid ""
 "yourself is xdm - because automatic restart might disconnect your active X11 "
 "sessions."
 msgstr ""
-"Запущенные сервисы и программы, которые используют NSS, должны быть "
+"Запущенные службы и программы, которые используют NSS, должны быть "
 "перезапущены, иначе они не будут способны выполнять поиск или "
 "аутентификацию. В процессе установки возможно перезапустить некоторые "
-"сервисы (такие, как ssh или telnetd), но другие программы не могут быть "
+"службы (такие, как ssh или telnetd), но другие программы не могут быть "
 "автоматически перезапущены. Одна из таких программ, которая требует ручной "
 "остановки и перезапуска после обновления glibc, это xdm, так как её "
 "автоматический перезапуск может отключить ваши активные сессии X11."
@@ -126,7 +126,7 @@ msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
 msgstr ""
-"Этот сценарий определил следующие установленные сервисы, которые должны быть "
+"Этот сценарий определил следующие установленные службы, которые должны быть "
 "остановлены перед обновлением: ${services}"
 
 #. Type: boolean
@@ -143,7 +143,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr "Для обновления GNU libc должны быть перезапущены следующие сервисы:"
+msgstr "Для обновления GNU libc должны быть перезапущены следующие службы:"
 
 #. Type: string
 #. Description
@@ -155,11 +155,11 @@ msgid ""
 "review the following space-separated list of init.d scripts for services to "
 "be restarted now, and correct it if needed."
 msgstr ""
-"Запущенные сервисы и программы, которые используют NSS, должны быть "
+"Запущенные службы и программы, которые используют NSS, должны быть "
 "перезапущены, иначе они не будут способны выполнять поиск или аутентификацию "
-"(для таких сервисов, как ssh, это может повлиять на возможность входа в "
+"(для таких служб, как ssh, это может повлиять на возможность входа в "
 "систему). Просмотрите следующий разделённый пробелами список из скриптов "
-"init.d для сервисов, которые будут сейчас перезапущены и отредактируйте его "
+"init.d для служб, которые будут сейчас перезапущены и отредактируйте его "
 "при необходимости."
 
 #. Type: string
@@ -175,8 +175,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr ""
-"Произошёл сбой при перезапуске некоторых сервисов для обновления GNU libc"
+msgstr "Произошёл сбой при перезапуске некоторых служб для обновления GNU libc"
 
 #. Type: error
 #. Description
@@ -185,7 +184,7 @@ msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
 msgstr ""
-"Следующие сервисы не могут быть перезапущены для обновления библиотеки GNU "
+"Следующие службы не могут быть перезапущены для обновления библиотеки GNU "
 "libc:"
 
 #. Type: error
@@ -196,7 +195,7 @@ msgid ""
 "start'."
 msgstr ""
 "Вам будет нужно запустить их вручную, для чего следует выполнить '/etc/init."
-"d/<сервис> start'."
+"d/<служба> start'."
 
 #. Type: error
 #. Description
@@ -226,7 +225,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "Перезапускать службы при обновлении пакета не задавая вопрос?"
 
 #. Type: boolean
 #. Description
@@ -240,3 +239,12 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"В системе установлены службы, которые требуют перезапуска "
+"после обновления определённых библиотек (например, "
+"libpam, libc и libssl). Так как это может вызвать перерыв в работе службы, "
+"обычно, при каждом обновлении выдаётся список служб, которые "
+"нужно перезапустить. "
+"Чтобы этот вопрос не задавался, вы можете ответить утвердительно; "
+"в этом случае все необходимые службы будут перезапущены "
+"автоматически."
+
