--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -1,16 +1,16 @@
 # Translation of glibc debconf templates to German
-# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2006-2009.
+# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2006-2009, 2011.
 # This file is distributed under the same license as the glibc package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: glibc 2.9-5\n"
+"Project-Id-Version: glibc 2.13-22\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2009-03-16 19:04+0100\n"
+"PO-Revision-Date: 2011-12-14 19:39+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
-"Language: \n"
+"Language: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -212,8 +212,8 @@ msgstr ""
 "Eine oder mehrere laufende Instanzen von Xscreensaver oder Xlockmore sind "
 "auf diesem System entdeckt worden. Aufgrund inkompatibler Änderungen in "
 "Bibliotheken wird das GNU Libc-Upgrade Sie außerstande setzen, sich "
-"gegenüberdiesen Programmen zu authentifizieren. Sie sollten dafür sorgen, "
-"dass dieseProgramme neu gestartet oder beendet werden, bevor Sie dieses "
+"gegenüber diesen Programmen zu authentifizieren. Sie sollten dafür sorgen, "
+"dass diese Programme neu gestartet oder beendet werden, bevor Sie dieses "
 "Upgrade fortsetzen, damit Ihre Benutzer nicht aus ihren laufenden Sitzungen "
 "ausgesperrt werden."
 
@@ -221,7 +221,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "Dienste bei Paket-Upgrades ohne Rückfrage neu starten?"
 
 #. Type: boolean
 #. Description
@@ -235,3 +235,11 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"Auf Ihrem System sind Dienste installiert, die beim Upgrade bestimmter "
+"Bibliotheken, wie Libpam, Libc und Libssl, neu gestartet werden müssen. Da "
+"diese Neustarts zu Unterbrechungen der Dienste für dieses System führen "
+"können, werden Sie normalerweise bei jedem Upgrade über die Liste der neu zu "
+"startenden Dienste befragt. Sie können diese Option wählen, um diese Abfrage "
+"zu vermeiden; stattdessen werden alle notwendigen Dienste-Neustarts für Sie "
+"automatisch vorgenommen und die Beantwortung von Fragen bei jedem Upgrade von "
+"Bibliotheken vermieden."
