* patches/any/cvs-tzfile.diff: fix integer overflow in timezone code.     Closes: #650790.
svn path=/glibc-package/trunk/; revision=5093

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * Add m68k expected tests results.
   * Update Russian debconf translation, by Yuri Kozlov.  Closes: #652428.
   * Update German debconf translation, by Helge Kreutzman.  Closes: #652556.
+  * patches/any/cvs-tzfile.diff: fix integer overflow in timezone code.
+    Closes: #650790.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
