* Don't provide debugging symbols for libc-bin, libc-dev-bin and nscd     packages to avoid conflicts with multiarch.
svn path=/glibc-package/trunk/; revision=5095

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * Update German debconf translation, by Helge Kreutzman.  Closes: #652556.
   * patches/any/cvs-tzfile.diff: fix integer overflow in timezone code.
     Closes: #650790.
+  * Don't provide debugging symbols for libc-bin, libc-dev-bin and nscd 
+    packages to avoid conflicts with multiarch.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
