* Update Dutch debconf translation, by Jeroen Schot.  Closes: #652632.
svn path=/glibc-package/trunk/; revision=5098

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * Don't provide debugging symbols for libc-bin, libc-dev-bin and nscd 
     packages to avoid conflicts with multiarch.
   * sysdeps/armel.mk, sysdeps/armhf.mk: fix cross compiling.
+  * Update Dutch debconf translation, by Jeroen Schot.  Closes: #652632.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
