--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -1,14 +1,15 @@
-# Dutch eglibc po-debconf translation,
-# Copyright (C) 2011 THE PACKAGE'S COPYRIGHT HOLDER
+# Dutch translation of eglibc po-debconf templates.
+# Copyright (C) 2008-2011 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the eglibc package.
+# Bart Cornelis <cobaco@skolelinux.no>, 2008.
 # Vincent Zweije <vincent@zweije.nl>, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: eglibc 2.13-21\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
-"PO-Revision-Date: 2011-11-22 14:56+0100\n"
+"Project-Id-Version: eglibc 2.13-23\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
+"PO-Revision-Date: 2011-12-19 13:23+0100\n"
 "Last-Translator: Vincent Zweije <vincent@zweije.nl>\n"
 "Language-Team: Debian l10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -216,3 +217,30 @@ msgstr ""
 "deze actieve instanties te authenticeren. U wordt sterk aangeraden om deze "
 "instanties te herstarten of stoppen voordat u de opwaardering van GNU libc "
 "voortzet, anders kunnen gebruikers van hun sessies worden buitengesloten."
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr "Diensten zonder vragen herstarten bij het opwaarderen van pakketten?"
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
+"Er zijn diensten op uw systeem geïnstalleerd die moeten worden herstart "
+"wanneer bepaalde bibliotheken, zoals libpam, libc en libssl, worden "
+"opgewaardeerd. Omdat deze herstarts dienstonderbrekingen op uw systeem "
+"kunnen veroorzaken wordt u normaal gesproken bij elke opwaardering gevraagd "
+"welke diensten u wilt herstarten. Als u voor deze optie kiest wordt dit niet "
+"meer aan u gevraagd. In plaats daarvan worden alle noodzakelijke herstarts "
+"automatisch gedaan zodat u geen vragen krijgt bij elke opwaardering van een "
+"bibliotheek."
