* patches/hurd/tg-struct_stat.diff: fix #ifdef typos.
svn path=/glibc-package/trunk/; revision=5099

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ eglibc (2.13-24) UNRELEASED; urgency=low
     packages to avoid conflicts with multiarch.
   * sysdeps/armel.mk, sysdeps/armhf.mk: fix cross compiling.
   * Update Dutch debconf translation, by Jeroen Schot.  Closes: #652632.
+  * patches/hurd/tg-struct_stat.diff: fix #ifdef typos.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
