--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * sysdeps/armel.mk, sysdeps/armhf.mk: fix cross compiling.
   * Update Dutch debconf translation, by Jeroen Schot.  Closes: #652632.
   * patches/hurd/tg-struct_stat.diff: fix #ifdef typos.
+  * kfreebsd/local-sysdeps.diff: update to revision 3952 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
