* patches/m68k/local-pthread_lock.diff: remove, obsolete.
svn path=/glibc-package/trunk/; revision=5103

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 eglibc (2.13-24) UNRELEASED; urgency=low
 
-  * patches/m68k/local-byteswap.diff: drop the m68k optimized version of
+  * patches/m68k/cvs-byteswap.diff: fix m68k optimized version of 
     <bits/byteswap.h>.  Closes: #652356.
   * Add m68k expected tests results.
   * Update Russian debconf translation, by Yuri Kozlov.  Closes: #652428.
@@ -13,6 +13,7 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * Update Dutch debconf translation, by Jeroen Schot.  Closes: #652632.
   * patches/hurd/tg-struct_stat.diff: fix #ifdef typos.
   * kfreebsd/local-sysdeps.diff: update to revision 3952 (from glibc-bsd).
+  * patches/m68k/local-pthread_lock.diff: remove, obsolete.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
