--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * patches/hurd/tg-struct_stat.diff: fix #ifdef typos.
   * kfreebsd/local-sysdeps.diff: update to revision 3952 (from glibc-bsd).
   * patches/m68k/local-pthread_lock.diff: remove, obsolete.
+  * patches/arm/cvs-ucontext.diff: fix namespace pollution from 
+    <sys/ucontext.h> on arm.  Closes: #652844.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
