* Update French debconf translation, by Christian Perrier.  Closes:     #652860.
svn path=/glibc-package/trunk/; revision=5105

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ eglibc (2.13-24) UNRELEASED; urgency=low
   * patches/m68k/local-pthread_lock.diff: remove, obsolete.
   * patches/arm/cvs-ucontext.diff: fix namespace pollution from 
     <sys/ucontext.h> on arm.  Closes: #652844.
+  * Update French debconf translation, by Christian Perrier.  Closes: 
+    #652860.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 14 Dec 2011 00:42:25 +0100
 
