--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -3,21 +3,22 @@
 # This file is distributed under the same license as the glibc package.
 #
 # Translators:
-# Christian Perrier <bubulle@debian.org>, 2007, 2008, 2009.
 # Denis Barbier 2001-2006.
+# Christian Perrier <bubulle@debian.org>, 2007, 2008, 2009, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2009-03-14 08:09+0100\n"
+"PO-Revision-Date: 2011-12-15 06:54+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. Type: multiselect
 #. Choices
@@ -225,6 +226,8 @@ msgstr ""
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
 msgstr ""
+"Redémarrer inconditionnellement les services lors des mises à jour de "
+"paquets ?"
 
 #. Type: boolean
 #. Description
@@ -238,3 +241,10 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"Certains services installés sur le système doivent être redémarrés lorsque "
+"certaines bibliothèques, comme libpam, libc ou libssl, sont mises à jour. "
+"Comme ces redémarrages peuvent conduire à une interruption du service, le "
+"choix de les redémarrer ou non est en général offert lors de ces mises à "
+"jour. Vous pouvez choisir ici que ce choix ne soit plus offert et que les "
+"redémarrages aient lieu systématiquement lors des mises à jour de "
+"bibliothèques."
