--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-25) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 25 Dec 2011 18:10:46 +0100
+
 eglibc (2.13-24) unstable; urgency=low
 
   * patches/m68k/cvs-byteswap.diff: fix m68k optimized version of 
