* patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with     gcc-4.6.
svn path=/glibc-package/trunk/; revision=5111

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.13-25) UNRELEASED; urgency=low
 
-  * 
+  * patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with
+    gcc-4.6.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 25 Dec 2011 18:10:46 +0100
 
