submitted-mmap.diff: new patch to fix iceweasel hang.
svn path=/glibc-package/trunk/; revision=5113

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 eglibc (2.13-25) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with
     gcc-4.6.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 25 Dec 2011 18:10:46 +0100
+  [ Samuel Thibault ]
+  * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
+
+ -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
 
 eglibc (2.13-24) unstable; urgency=low
 
