* Update Swedish debconf translation, by Martin Bagge.  Closes: #653559.
svn path=/glibc-package/trunk/; revision=5114

--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -1,28 +1,23 @@
-# translation of glibc_2.7-11_sv.po to swedish
-# Translators, if you are not familiar with the PO format, gettext
-# documentation is worth reading, especially sections dedicated to
-# this format, e.g. by running:
-# info -n '(gettext)PO Files'
-# info -n '(gettext)Header Entry'
-# Some information specific to po-debconf are available at
-# /usr/share/doc/po-debconf/README-trans
-# or http://www.debian.org/intl/l10n/po-debconf/README-trans
-# Developers do not need to manually edit POT or PO files.
+# Translation of eglibc debconf template to Swedish
+# Copyright (C) 2011 Martin Bagge <brother@bsnet.se>
+# This file is distributed under the same license as the eglibc package.
 #
-# Martin Bagge <martin.bagge@bthstudent.se>, 2008.
+# Martin Bagge <brother@bsnet.se>, 2008, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc_2.7-11_sv\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2009-04-07 18:46+0100\n"
-"Last-Translator: Martin Bagge <brother@bsnet.se>\n"
-"Language-Team: swedish <debian-l10n-swedish@lists.debian.org>\n"
+"PO-Revision-Date: 2011-12-29 11:11+0100\n"
+"Last-Translator: Martin Bagge / brother <brother@bsnet.se>\n"
+"Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"X-Poedit-Language: Swedish\n"
+"X-Poedit-Country: Sweden\n"
 
 #. Type: multiselect
 #. Choices
@@ -43,8 +38,8 @@ msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Lokalanpassning (locale) är ett ramverk för att växla mellan flera språk för "
-"att låta användare använda sitt språk, land, tecken och sorteringsordning, "
+"Lokalanpassning (locale) Ã¤r ett ramverk fÃ¶r att vÃ¤xla mellan flera sprÃ¥k fÃ¶r "
+"att lÃ¥ta anvÃ¤ndare anvÃ¤nda sitt sprÃ¥k, land, tecken och sorteringsordning, "
 "etc."
 
 #. Type: multiselect
@@ -55,9 +50,9 @@ msgid ""
 "default, particularly for new installations. Other character sets may be "
 "useful for backwards compatibility with older systems and software."
 msgstr ""
-"Välj vilka lokalanpassningar som ska genereras. UTF-8-lokaler bör väljas som "
-"standard, speciellt för nya installationer. Andra teckenuppsättningar kan "
-"vara användbara för bakåtkompatibilitet med äldre system och programvara."
+"VÃ¤lj vilka lokalanpassningar som ska genereras. UTF-8-lokaler bÃ¶r vÃ¤ljas som "
+"standard, speciellt fÃ¶r nya installationer. Andra teckenuppsÃ¤ttningar kan "
+"vara anvÃ¤ndbara fÃ¶r bakÃ¥tkompatibilitet med Ã¤ldre system och programvara."
 
 #. Type: select
 #. Choices
@@ -69,7 +64,7 @@ msgstr "Ingen"
 #. Description
 #: ../debhelper.in/locales.templates:2002
 msgid "Default locale for the system environment:"
-msgstr "Välj lokalanpassning som ska vara standard i systemet:"
+msgstr "VÃ¤lj lokalanpassning som ska vara standard i systemet:"
 
 #. Type: select
 #. Description
@@ -79,9 +74,9 @@ msgid ""
 "for the user. You can choose a default locale for the system from the "
 "generated locales."
 msgstr ""
-"Många paket i Debian använder lokalanpassningar för att visa text i det "
-"korrekta språket för användaren. Du kan välja en standardlokal för systemet "
-"från de genererade lokalerna."
+"MÃ¥nga paket i Debian anvÃ¤nder lokalanpassningar fÃ¶r att visa text i det "
+"korrekta sprÃ¥ket fÃ¶r anvÃ¤ndaren. Du kan vÃ¤lja en standardlokal fÃ¶r systemet "
+"frÃ¥n de genererade lokalerna."
 
 #. Type: select
 #. Description
@@ -91,8 +86,8 @@ msgid ""
 "is a multi-user system where not all users are able to speak the default "
 "language, they will experience difficulties."
 msgstr ""
-"Detta kommer att välja standardspråket för hela systemet. Om du kör ett "
-"system med flera användare där inte alla talar det valda språket, kan de få "
+"Detta kommer att vÃ¤lja standardsprÃ¥ket fÃ¶r hela systemet. Om du kÃ¶r ett "
+"system med flera anvÃ¤ndare dÃ¤r inte alla talar det valda sprÃ¥ket, kan de fÃ¥ "
 "problem."
 
 #. Type: boolean
@@ -113,11 +108,11 @@ msgid ""
 "yourself is xdm - because automatic restart might disconnect your active X11 "
 "sessions."
 msgstr ""
-"Körande tjänster och program som använder NSS behöver startas om, annars "
-"kanske de inte kan köra uppslag eller autentisering längre. Installationen "
-"kan starta om några tjänster (ex. ssh och telnetd), andra program kan inte "
-"startas om automatiskt - xdm är ett sådant program som du måste starta om "
-"själv eftersom det skulle starta om din X-session."
+"KÃ¶rande tjÃ¤nster och program som anvÃ¤nder NSS behÃ¶ver startas om, annars "
+"kanske de inte kan kÃ¶ra uppslag eller autentisering lÃ¤ngre. Installationen "
+"kan starta om nÃ¥gra tjÃ¤nster (ex. ssh och telnetd), andra program kan inte "
+"startas om automatiskt - xdm Ã¤r ett sÃ¥dant program som du mÃ¥ste starta om "
+"sjÃ¤lv eftersom det skulle starta om din X-session."
 
 #. Type: boolean
 #. Description
@@ -126,7 +121,7 @@ msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
 msgstr ""
-"Skriptet hittade följande installerade tjänster som måste stoppas före "
+"Skriptet hittade fÃ¶ljande installerade tjÃ¤nster som mÃ¥ste stoppas fÃ¶re "
 "uppgraderingen: ${services}"
 
 #. Type: boolean
@@ -136,14 +131,14 @@ msgid ""
 "If you want to interrupt the upgrade now and continue later, please answer "
 "No to the question below."
 msgstr ""
-"Om du vill avbryta uppgraderingen nu och fortsätta senare anger du Nej på "
-"frågan nedan."
+"Om du vill avbryta uppgraderingen nu och fortsÃ¤tta senare anger du Nej pÃ¥ "
+"frÃ¥gan nedan."
 
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr "Tjänster att starta om för uppgradering av GNU libc-biblioteket:"
+msgstr "TjÃ¤nster att starta om fÃ¶r uppgradering av GNU libc-biblioteket:"
 
 #. Type: string
 #. Description
@@ -155,11 +150,11 @@ msgid ""
 "review the following space-separated list of init.d scripts for services to "
 "be restarted now, and correct it if needed."
 msgstr ""
-"Körande tjänster och program som använder NSS behöver startas om, annars "
-"kanske de inte kan köra uppslag eller autentisering längre (för tjänster "
-"såsom ssh kan det påverka din möjlighet att logga in). Granska följande "
-"blankstegsseparerade lista över init.d-skript för tjänster som ska startas "
-"om nu, och gör ändringar om det behövs."
+"KÃ¶rande tjÃ¤nster och program som anvÃ¤nder NSS behÃ¶ver startas om, annars "
+"kanske de inte kan kÃ¶ra uppslag eller autentisering lÃ¤ngre (fÃ¶r tjÃ¤nster "
+"sÃ¥som ssh kan det pÃ¥verka din mÃ¶jlighet att logga in). Granska fÃ¶ljande "
+"blankstegsseparerade lista Ã¶ver init.d-skript fÃ¶r tjÃ¤nster som ska startas "
+"om nu, och gÃ¶r Ã¤ndringar om det behÃ¶vs."
 
 #. Type: string
 #. Description
@@ -167,14 +162,14 @@ msgstr ""
 msgid ""
 "Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
-"Observera: omstart av sshd/telnetd ska inte påverka befintliga anslutningar."
+"Observera: omstart av sshd/telnetd ska inte pÃ¥verka befintliga anslutningar."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
 msgstr ""
-"Misslyckades med att starta om vissa tjänster för uppgraderingen av GNU libc"
+"Misslyckades med att starta om vissa tjÃ¤nster fÃ¶r uppgraderingen av GNU libc"
 
 #. Type: error
 #. Description
@@ -183,7 +178,7 @@ msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
 msgstr ""
-"Följande tjänster kunde inte startas om för uppgraderingen av GNU libc-"
+"FÃ¶ljande tjÃ¤nster kunde inte startas om fÃ¶r uppgraderingen av GNU libc-"
 "biblioteket:"
 
 #. Type: error
@@ -193,7 +188,7 @@ msgid ""
 "You will need to start these manually by running '/etc/init.d/<service> "
 "start'."
 msgstr ""
-"Du behöver starta dessa manuellt genom att köra \"/etc/init.d/<tjänst> start"
+"Du behÃ¶ver starta dessa manuellt genom att kÃ¶ra \"/etc/init.d/<tjÃ¤nst> start"
 "\"."
 
 #. Type: error
@@ -201,7 +196,7 @@ msgstr ""
 #: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
 msgstr ""
-"xscreensaver och xlockmore måste startas om innan uppgraderingen påbörjas"
+"xscreensaver och xlockmore mÃ¥ste startas om innan uppgraderingen pÃ¥bÃ¶rjas"
 
 #. Type: error
 #. Description
@@ -214,18 +209,18 @@ msgid ""
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
 msgstr ""
-"En eller flera instanser av xscreensaver eller xlockmore har hittats på "
-"systemet. På grund av inkompatabilitet i och med förändringar av biblioteket "
-"kan uppgraderingen av GNU libc innebära att du inte kan autentisera med "
+"En eller flera instanser av xscreensaver eller xlockmore har hittats pÃ¥ "
+"systemet. PÃ¥ grund av inkompatabilitet i och med fÃ¶rÃ¤ndringar av biblioteket "
+"kan uppgraderingen av GNU libc innebÃ¤ra att du inte kan autentisera med "
 "dessa program. Se till att alla instanser av programmen startas om eller "
-"stoppas innan du fortsätter med denna uppgradering för att undvika att "
-"användare blir utelåsta från sina sessioner."
+"stoppas innan du fortsÃ¤tter med denna uppgradering fÃ¶r att undvika att "
+"anvÃ¤ndare blir utelÃ¥sta frÃ¥n sina sessioner."
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "Ska tjÃ¤nster startas om vid paketuppgraderinger utan att fÃ¶rst frÃ¥ga?"
 
 #. Type: boolean
 #. Description
@@ -239,3 +234,9 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"Det finns tjÃ¤nster pÃ¥ installerade pÃ¥ systemet som behÃ¶ver startas om nÃ¤r "
+"vissa bibliotek, exempelvis libpam, libc och libssl, uppgraderas. Eftersom "
+"dessa omstarter kan orsaka avbrott i tjÃ¤nsten stÃ¤lls normalt en frÃ¥ga vid "
+"varje uppgradering dÃ¤r en lista med tjÃ¤nster som ska startas om presenteras. "
+"Du kan vÃ¤lja att aktivera detta alternativ fÃ¶r att undvika att frÃ¥gan "
+"stÃ¤lls. IstÃ¤llet kommer alla nÃ¶dvÃ¤ndiga omstarter att gÃ¶ras automatiskt."
