--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with
     gcc-4.6.
+  * Update Swedish debconf translation, by Martin Bagge.  Closes: #653559.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
