Fix a typo in changelog
svn path=/glibc-package/trunk/; revision=5115

--- a/debian/changelog
+++ b/debian/changelog
@@ -2060,7 +2060,7 @@ glibc (2.9-9) unstable; urgency=low
 glibc (2.9-8) unstable; urgency=low
 
   [ Aurelien Jarno ]
-  * Update Swedish debconf translation, by Martin Bagger.  Closes: #522982.
+  * Update Swedish debconf translation, by Martin Bagge.  Closes: #522982.
   * mips/cvs-context.diff: new patch from upstream to add getcontext,
     setcontext, makecontext, swapcontext.
   * any/submitted-mount_h.diff: new patch to add MNT_DETACH and MNT_EXPIRE to
