--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -3,19 +3,21 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Bjørn Steensrud <bjornst@powertech.no>, 2007.
+# Bjørn Steensrud <bjornst@skogkatt.homelinux.org>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc_nb\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2007-02-26 20:05+0100\n"
-"Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
+"PO-Revision-Date: 2011-12-29 12:39+0100\n"
+"Last-Translator: Bjørn Steensrud <bjornst@skogkatt.homelinux.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: multiselect
 #. Choices
@@ -32,12 +34,11 @@ msgstr "Lokaler (stedstilpasninger) som skal opprettes:"
 #. Type: multiselect
 #. Description
 #: ../debhelper.in/locales.templates:1002
-#, fuzzy
 msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"«Lokale» er et rammeverk som kan veksle mellom flere språk, slik at brukere "
+"Lokaler er et rammeverk som kan veksle mellom flere språk, slik at brukere "
 "kan velge sitt språk, land, tegnsett, sorteringsrekkefølge osv."
 
 #. Type: multiselect
@@ -48,6 +49,9 @@ msgid ""
 "default, particularly for new installations. Other character sets may be "
 "useful for backwards compatibility with older systems and software."
 msgstr ""
+"Velg hvilke lokaler som skal opprettes. Som standard er det best å opprette "
+"UTF-8-lokaler, spesielt for mye installasjoner. Andre tegnsett kan være "
+"nyttig for kompatibilitet bakover med eldre systemer og programvare."
 
 #. Type: select
 #. Choices
@@ -64,35 +68,32 @@ msgstr "Standardlokale for systemmiljøet:"
 #. Type: select
 #. Description
 #: ../debhelper.in/locales.templates:2002
-#, fuzzy
 msgid ""
 "Many packages in Debian use locales to display text in the correct language "
 "for the user. You can choose a default locale for the system from the "
 "generated locales."
 msgstr ""
 "Mange pakker i Debian bruker lokaler for å vise tekst i det riktige språket "
-"for brukerne. Du kan endre standardlokalet om det ikke er ditt førstespråk. "
-"Disse valgene er basert på hvilke lokaler som er valgt ut til å bli "
-"opprettet."
+"for brukerne. Du kan velge et standardlokale for systemet blant de lokalene "
+"som er opprettet."
 
 #. Type: select
 #. Description
 #: ../debhelper.in/locales.templates:2002
-#, fuzzy
 msgid ""
 "This will select the default language for the entire system. If this system "
 "is a multi-user system where not all users are able to speak the default "
 "language, they will experience difficulties."
 msgstr ""
-"Merk: Dette velger språk for hele systemet. Hvis dette er et "
+"Dette velger standard språk for hele systemet. Hvis dette er et "
 "flerbrukersystem der ikke alle brukerne forstår det valgte språket, så kan "
-"de komme opp i vansker, så kanskje det ikke bør velges et standardlokale."
+"de komme opp i vansker."
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:1001
 msgid "Do you want to upgrade glibc now?"
-msgstr ""
+msgstr "Vil du oppgradere glibc nå?"
 
 #. Type: boolean
 #. Description
@@ -106,6 +107,12 @@ msgid ""
 "yourself is xdm - because automatic restart might disconnect your active X11 "
 "sessions."
 msgstr ""
+"Tjenester og programmer som nå kjører og bruker NSS må startes på nytt, "
+"ellers vil de kanskje ikke kunne gjøre oppslag eller autentisering lenger. "
+"Installasjonsprosessen kan ta omstart på noen tjenester (slik som ssh eller "
+"telnetd), men andre programmer kan ikke restartes automatisk. xdm er et slikt "
+"program som du må stoppe og restarte manuelt etter glibc-oppgradering, fordi "
+"automatisk omstart vil kunne koble fra dine aktive X11-økter."
 
 #. Type: boolean
 #. Description
@@ -114,6 +121,8 @@ msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
 msgstr ""
+"Dette skriptet oppdaget følgende installerte tjenester som må stoppes før "
+"oppgraderingen: $(services)"
 
 #. Type: boolean
 #. Description
@@ -122,12 +131,14 @@ msgid ""
 "If you want to interrupt the upgrade now and continue later, please answer "
 "No to the question below."
 msgstr ""
+"Svar Nei på spørsmålet nedenfor hvis du vil avbryte oppgraderingen nå og "
+"fortsette senere."
 
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr ""
+msgstr "Tjenester som skal restartes for oppgradering av GNU libc-biblioteket:"
 
 #. Type: string
 #. Description
@@ -139,6 +150,11 @@ msgid ""
 "review the following space-separated list of init.d scripts for services to "
 "be restarted now, and correct it if needed."
 msgstr ""
+"Tjenester og programmer som nå kjører og bruker NSS må startes på nytt, "
+"ellers vil de kanskje ikke kunne gjøre oppslag eller autentisering lenger "
+"(for tjenester slik som ssh kan dette påvirke din mulighet til å logge inn). "
+"Se gjennom denne lista over init.d-skripter som skal restartes nå, og rett "
+"opp hvis det trengs."
 
 #. Type: string
 #. Description
@@ -146,12 +162,14 @@ msgstr ""
 msgid ""
 "Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
+"Merk: om sshd/telnetd restartes skulle det ikke påvirke eksisterende "
+"tilkoblinger."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr ""
+msgstr "Noen tjenester kunne ikke restartes for GNU libc-oppgradering"
 
 #. Type: error
 #. Description
@@ -160,6 +178,8 @@ msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
 msgstr ""
+"Følgende tjenester kunne ikke restartes for oppgradering av GNU "
+"libc-biblioteket:"
 
 #. Type: error
 #. Description
@@ -167,13 +187,13 @@ msgstr ""
 msgid ""
 "You will need to start these manually by running '/etc/init.d/<service> "
 "start'."
-msgstr ""
+msgstr "Du må starte disse manuelt ved å kjøre «/etc/init.d/<service> start»."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
-msgstr ""
+msgstr "xscreensaver og xlockmore må restartes før oppgradering"
 
 #. Type: error
 #. Description
@@ -186,12 +206,18 @@ msgid ""
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
 msgstr ""
+"En eller flere instanser av xsreensaver eller xlockmore kjører nå på dette "
+"systemet. På  grunn av  ikke-kompatible endringer i biblioteket vil "
+"oppgraderingen gjøre det umulig å autentisere til disse programmene. Du må "
+"sørge for at disse programmene blir stoppet eller restartet før denne "
+"oppgraderingen fortsetter, slik at dine brukere ikke blir utestengt fra sine "
+"gjeldende økter."
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "Skal tjenester restartes uten spørsmål under pakkeoppgraderinger?"
 
 #. Type: boolean
 #. Description
@@ -205,3 +231,11 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"På systemet ditt finnes det tjenester som må startes på nytt når visse "
+"biblioteker, slik som libpam, libc og libssl, oppgraderes. Slike omstarter "
+"kan avbryte tjenester på systemet, og normalt blir du spurt ved hver "
+"oppgradering om hvilke tjenester du vil starte på nytt. Du kan slå på dette "
+"valget for å slippe å bli spurt, da blir i stedet alle nødvendige omstarter "
+"gjort automatisk slik at du ikke får spørsmål ved hver biblioteksoppgradering."
+
+
