* Add port 783 (spamd) to /etc/bindresvport.blacklist.  Closes: #629984.
svn path=/glibc-package/trunk/; revision=5119

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   * Update Swedish debconf translation, by Martin Bagge.  Closes: #653559.
   * Update Norwegian bokmål debconf translation, by Bjørn Steensrud.  Closes:
     #653566.
+  * Add port 783 (spamd) to /etc/bindresvport.blacklist.  Closes: #629984.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
