* patches/any/cvs-vfscanf.diff: new patch from upstream to fix segfault in     sscanf for large decimal input string.  Closes: #553206.
svn path=/glibc-package/trunk/; revision=5120

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   * Update Norwegian bokmål debconf translation, by Bjørn Steensrud.  Closes:
     #653566.
   * Add port 783 (spamd) to /etc/bindresvport.blacklist.  Closes: #629984.
+  * patches/any/cvs-vfscanf.diff: new patch from upstream to fix segfault in
+    sscanf for large decimal input string.  Closes: #553206.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
