--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   * Add port 783 (spamd) to /etc/bindresvport.blacklist.  Closes: #629984.
   * patches/any/cvs-vfscanf.diff: new patch from upstream to fix segfault in
     sscanf for large decimal input string.  Closes: #553206.
+  * local/manpages/ld.so.8: add a missing new line.  Closes: #654582. 
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
