* debhelper.in/libc.NEWS: suggest environment variables as an     alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
svn path=/glibc-package/trunk/; revision=5122

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   * patches/any/cvs-vfscanf.diff: new patch from upstream to fix segfault in
     sscanf for large decimal input string.  Closes: #553206.
   * local/manpages/ld.so.8: add a missing new line.  Closes: #654582. 
+  * debhelper.in/libc.NEWS: suggest environment variables as an
+    alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
