--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,8 @@ eglibc (2.13-24) unstable; urgency=low
   * Add m68k expected tests results.
   * Update Russian debconf translation, by Yuri Kozlov.  Closes: #652428.
   * Update German debconf translation, by Helge Kreutzman.  Closes: #652556.
-  * patches/any/cvs-tzfile.diff: fix integer overflow in timezone code.
-    Closes: #650790.
+  * patches/any/cvs-tzfile.diff: fix integer overflow in timezone code
+    (CVE-2009-5029).  Closes: #650790.
   * Don't provide debugging symbols for libc-bin, libc-dev-bin and nscd 
     packages to avoid conflicts with multiarch.
   * sysdeps/armel.mk, sysdeps/armhf.mk: fix cross compiling.
