--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,9 @@ eglibc (2.13-25) UNRELEASED; urgency=low
     alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
 
   [ Samuel Thibault ]
-  * patches/hurd-i386/submitted-mmap.diff: new patch to fix iceweasel hang.
+  * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
+  * patches/hurd-i386/submitted-hurd-socket-EAFNOSUPPORT.diff: New patch to
+    fix error value.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
 
