fixup kfreebsd/local-use-thr-primitives.diff
svn path=/glibc-package/trunk/; revision=5130

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-hurd-socket-EAFNOSUPPORT.diff: New patch to
     fix error value.
 
+  [ Petr Salinger ]
+  * fixup kfreebsd/local-use-thr-primitives.diff
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
 
 eglibc (2.13-24) unstable; urgency=low
