--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ eglibc (2.13-25) UNRELEASED; urgency=low
     fix error value.
 
   [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4002 (from glibc-bsd).
+    Closes: #630203.
   * fixup kfreebsd/local-use-thr-primitives.diff
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
