--- a/debian/changelog
+++ b/debian/changelog
@@ -21,7 +21,7 @@ eglibc (2.13-25) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4002 (from glibc-bsd).
     Closes: #630203.
-  * fixup kfreebsd/local-use-thr-primitives.diff. Closes #657687.
+  * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #657687.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
 
