--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-25) UNRELEASED; urgency=low
+eglibc (2.13-25) UNRELEASED; urgency=medium
 
   [ Aurelien Jarno ]
   * patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with
