* Update Polish debconf translation, by Michał Kułach.  Closes: #657748.
svn path=/glibc-package/trunk/; revision=5135

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
   * local/manpages/ld.so.8: add a missing new line.  Closes: #654582. 
   * debhelper.in/libc.NEWS: suggest environment variables as an
     alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
+  * Update Polish debconf translation, by Michał Kułach.  Closes: #657748.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
