* Update Spanish debconf translation, by Omar Campagne.  Closes: #655850.
svn path=/glibc-package/trunk/; revision=5136

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
   * debhelper.in/libc.NEWS: suggest environment variables as an
     alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
   * Update Polish debconf translation, by Michał Kułach.  Closes: #657748.
+  * Update Spanish debconf translation, by Omar Campagne.  Closes: #655850.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
