* Danish debconf translation update from Joe Hansen.  Closes: #656681.
svn path=/glibc-package/trunk/; revision=5137

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
     alternative, thanks to Jonathan Nieder for the idea.  Closes: #654835.
   * Update Polish debconf translation, by Michał Kułach.  Closes: #657748.
   * Update Spanish debconf translation, by Omar Campagne.  Closes: #655850.
+  * Danish debconf translation update from Joe Hansen.  Closes: #656681.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
