* kfreebsd/local-sysdeps.diff: update to revision 4024 (from glibc-bsd).     Closes: #654712.
svn path=/glibc-package/trunk/; revision=5138

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,8 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
     fix error value.
 
   [ Petr Salinger ]
-  * kfreebsd/local-sysdeps.diff: update to revision 4002 (from glibc-bsd).
-    Closes: #630203.
+  * kfreebsd/local-sysdeps.diff: update to revision 4024 (from glibc-bsd).
+    Closes: #630203, #654712.
   * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #657687.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
