* patches/alpha/submitted-epoll_create1.diff: new patch from Mike     Frysinger to fix epoll_create1() on alpha.
svn path=/glibc-package/trunk/; revision=5139

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
   * Update Polish debconf translation, by Michał Kułach.  Closes: #657748.
   * Update Spanish debconf translation, by Omar Campagne.  Closes: #655850.
   * Danish debconf translation update from Joe Hansen.  Closes: #656681.
+  * patches/alpha/submitted-epoll_create1.diff: new patch from Mike 
+    Frysinger to fix epoll_create1() on alpha.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
