* debian/control.in/main: bump build-depends on libc-linux-dev to     (>= 3.2.1-1) to get accept4 defined on ia64.     debian/libc6.1.symbols.ia64: force accept4 version to 2.13-25~.
svn path=/glibc-package/trunk/; revision=5141

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
   * Danish debconf translation update from Joe Hansen.  Closes: #656681.
   * patches/alpha/submitted-epoll_create1.diff: new patch from Mike 
     Frysinger to fix epoll_create1() on alpha.
+  * debian/control.in/main: bump build-depends on libc-linux-dev to
+    (>= 3.2.1-1) to get accept4 defined on ia64. 
+    debian/libc6.1.symbols.ia64: force accept4 version to 2.13-25~.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
