* debian/control.in/main: use architecture aliases in build-depends.
svn path=/glibc-package/trunk/; revision=5142

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
   * debian/control.in/main: bump build-depends on libc-linux-dev to
     (>= 3.2.1-1) to get accept4 defined on ia64. 
     debian/libc6.1.symbols.ia64: force accept4 version to 2.13-25~.
+  * debian/control.in/main: use architecture aliases in build-depends.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
