--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-25) UNRELEASED; urgency=medium
+eglibc (2.13-25) unstable; urgency=medium
 
   [ Aurelien Jarno ]
   * patches/s390/cvs-libm-ulps.diff: new patch to fix FTBFS on s390 with
@@ -21,6 +21,12 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
     (>= 3.2.1-1) to get accept4 defined on ia64. 
     debian/libc6.1.symbols.ia64: force accept4 version to 2.13-25~.
   * debian/control.in/main: use architecture aliases in build-depends.
+  * patches/amd64/cvs-avx-osxsave.diff: new patch from upstream to disable
+    AVX support if the kernel doesn't support it.
+  * patches/any/cvs-fmtmsg-lock.diff: new patch from upstream to fix a 
+    locking issue in fmtmsg.
+  * patches/any/cvs-reloc-sort.diff: new patch from upstream to fix 
+    relocation issues with dlopen().
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-mmap.diff: New patch to fix iceweasel hang.
@@ -32,7 +38,7 @@ eglibc (2.13-25) UNRELEASED; urgency=medium
     Closes: #630203, #654712.
   * fixup kfreebsd/local-use-thr-primitives.diff. Closes: #657687.
 
- -- Samuel Thibault <sthibault@debian.org>  Tue, 27 Dec 2011 02:02:41 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 29 Jan 2012 23:35:12 +0100
 
 eglibc (2.13-24) unstable; urgency=low
 
